--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ input[type="radio"].visually-hidden {
 }
 
 .site-wrapper {
-    min-width: 1254px;
+    min-width: 940px;
     background-color: #849d8f;
     background-image: url("../img/slide1.png");
     background-repeat: no-repeat;
@@ -70,13 +70,9 @@ input[type="radio"].visually-hidden {
 }
 
 .content-wrapper {
-    max-width: 1200px;
+    min-width: 1146px;
     margin: 0 auto;
     padding: 0 27px;
-}
-
-.main-header {
-    height: 100px;
 }
 
 .btn {
@@ -166,7 +162,6 @@ input[type="radio"].visually-hidden {
             align-items: flex-start;
     width: 1146px;
     margin: 0 auto;
-    padding: 0 27px;
     font-size: 16px;
     line-height: 18px;
     font-weight: 700;
@@ -195,7 +190,8 @@ input[type="radio"].visually-hidden {
     padding: 0;
     list-style: none;
     margin-right: auto;
-    margin-top: 30px;
+    margin-top: 23px;
+    margin-left: -11px;
 }
 
 .site-navigation a {
@@ -205,26 +201,23 @@ input[type="radio"].visually-hidden {
 }
 
 .site-navigation .site-item {
-    display: inline-block;
-    vertical-align: top;
-    margin-right: 28px;
-    margin-bottom: 20px;
+    position: relative;
 }
+
 
 .site-item .site-link {
     display: block;
+    padding: 7px 13px 8px;
+    white-space: nowrap;
     font-weight: 700;
     font-size: 16px;
     line-height: 18px;
     color: #fff;
-    text-decoration: none;
-    border-bottom: 1px solid rgba(255,255,255,0.2);
+    white-space: nowrap;
 }
 
 .site-link:hover, 
 .site-link:focus {
-    margin: -7px -13px -8px;
-    padding: 7px 13px 8px;
     color: #333;
     background-color: #f7f6f3;
     border-radius: 30px;
@@ -237,9 +230,12 @@ input[type="radio"].visually-hidden {
             box-shadow: inset 0 2px 1px 0 #696969;
 }
 
+.site-link span {
+    border-bottom: 1px solid rgba(255,255,255,0.2);
+}
+
 .site-navigation .site-active {
-    margin: -7px -13px -6px;
-    padding: 7px 13px 6px;
+    padding: 7px 13px 8px;
     background-color: #d07058;
     border-radius: 30px;
     color: #fff;    
@@ -252,10 +248,13 @@ input[type="radio"].visually-hidden {
 .site-navigation .sub-menu {
     display: none;
     position: absolute;
-    top: 61px;
+    top: 100%;
+    left: 50%;
     margin: 0;
-    margin-left: -21px;
+    margin-top: -1px;
+    margin-left: -53px;
     padding: 0;
+    padding-top: 5px;
     min-width: 143px;
     list-style: none;
     z-index: 2;
@@ -360,7 +359,6 @@ input[type="radio"].visually-hidden {
     max-height: 32px;
     border-radius: 30px;
     margin-right: 12px;
-    margin-bottom: 20px;
 }
 
 .user-btn a:hover,
@@ -483,7 +481,7 @@ input[type="radio"].visually-hidden {
 
 .slider {
     position: relative;
-    padding-top: 293px;
+    padding-top: 275px;
     margin-bottom: 42px;
     text-align: center;
     color: #ffffff;
@@ -543,7 +541,6 @@ input[type="radio"].visually-hidden {
 .slider-controls {
     position: absolute;
     bottom: 20px;
-    left: 75px;
     z-index: 20;
     font-size: 0;
 }
@@ -560,16 +557,16 @@ input[type="radio"].visually-hidden {
     cursor: pointer;
 }
 
-#btn-1:checked ~ .site-wrapper #slide1,
-#btn-2:checked ~ .site-wrapper #slide2,
-#btn-3:checked ~ .site-wrapper #slide3 {
-    display: block;
-}
-
 #btn-1:hover ~ .site-wrapper label[for="btn-1"],
 #btn-2:hover ~ .site-wrapper label[for="btn-2"],
 #btn-3:hover ~ .site-wrapper label[for="btn-3"] {
     background-color: #b2c1b7;
+}
+
+#btn-1:checked ~ .site-wrapper #slide1,
+#btn-2:checked ~ .site-wrapper #slide2,
+#btn-3:checked ~ .site-wrapper #slide3 {
+    display: block;
 }
 
 #btn-1:checked ~ .site-wrapper label[for="btn-1"],
@@ -596,13 +593,12 @@ input[type="radio"].visually-hidden {
 .main-wrapper {
     width: 1146px;
     margin: 0 auto;
-    padding: 0 27px;
 }
 
 .breadcrumbs {
     margin: 0;
     padding: 0;
-    margin-top: -1px;
+    margin-top: -18px;
     margin-bottom: 4px;
     list-style: none;
     font-size: 14px;
@@ -920,15 +916,19 @@ input[type="radio"].visually-hidden {
 }
 
 .free {
-    margin-top: 45px;
-    margin-right: 20px;
-    text-align: right;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    margin: 0;
 }
 
 .free-sweets article {
     width: 560px;
     min-height: 229px;
-
+    position: relative;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    padding: 20px;
 }
 
 .raspberry-free { 
@@ -944,11 +944,8 @@ input[type="radio"].visually-hidden {
     font-size: 35px;
     line-height: 41px;
     font-weight: 700;
-    margin: 0;
     padding: 0;
-    margin-top: 16px;
-    margin-left: 19px;
-    margin-bottom: 15px;
+    margin: 0 0 15px;
 }
 
 .raspberry-free p,
@@ -956,10 +953,8 @@ input[type="radio"].visually-hidden {
     font-size: 18px;
     line-height: 22px;
     font-weight: 700;
-    margin: 0;
+    margin: 15px 0 0;
     padding: 0;
-    padding-left: 20px;
-    padding-right: 16px;
 }
 
 .chocolate-free {
@@ -983,7 +978,6 @@ input[type="radio"].visually-hidden {
     padding: 0;
     list-style: none;
     margin-top: 40px;
-    width: 1200px;
 }
 
 .products img {
@@ -994,10 +988,6 @@ input[type="radio"].visually-hidden {
 .product-item {
     width: 267px;
     margin-right: 26px;
-}
-
-.inner .product-item {
-    margin-bottom: 22px;
 }
 
 .product-item .hit {
@@ -1018,59 +1008,47 @@ input[type="radio"].visually-hidden {
     display: none;
 }
 
-.product-item:nth-child(4n) {
-    margin-right: 0;
+.product-item:nth-child(4n),
+.product-item:nth-child(4n):hover {
+    margin-right: -13px;
 }
 
 .product-item:hover .hidden {
-    position: absolute;
-    bottom: 0;
-    display: inline-block;
-    vertical-align: top;
-    margin-bottom: 15px;
-    margin-left: 32px;
-    padding-right: 8px;
-    padding-left: 18px;
-    width: 180px;
+    margin-bottom: 16px;
+    margin-left: 31px;
+    padding-left: 14px;
+    padding-right: 14px;
+    min-width: 204px;
 }
 
 .product-item:hover {
     position: relative;
-    top: -6px;
-    left: -13px;
-    margin-right: 5px;
-    margin: 0;
-    margin-bottom: -80px;
+    margin-right: 13px;
+    margin-top: -6px;
+    margin-left: -13px;
+    margin-bottom: -60px;
     background-color: rgba(255,255,255,0.2);
     border-radius: 5px;
     -webkit-box-shadow: 0 20px 20px 0 rgba(0,0,0,0.4);
-            box-shadow: 0 20px 20px 0 rgba(0,0,0,0.4);
+    box-shadow: 0 20px 20px 0 rgba(0,0,0,0.4);
     padding-left: 13px;
     padding-right: 13px;
     padding-top: 6px;
-    padding-bottom: 73px;
-}
-
-.inner .product-item:hover {
-    margin-bottom: -58px;
 }
 
 .product-item:hover .hidden {
-    position: absolute;
-    bottom: 0;
     display: inline-block;
-    vertical-align: top;
-    margin-bottom: 27px;
-    margin-left: 27px;
-    padding-right: 8px;
-    padding-left: 8px;
-    width: 210px;
+    margin-left: 31px;
+    padding-left: 16px;
+    padding-right: 14px;
+    min-width: 204px;
+    border-radius: 20px;
 }
 
 .product-item p {
     width: 258px;
     text-align: center;
-    margin-top: 21px;
+    margin-top: 22px;
     margin-left: 5px;
 }
 
@@ -1251,6 +1229,7 @@ input[type="radio"].visually-hidden {
     line-height: 30px;
     font-weight: 700;
     text-decoration: underline;
+    color: #323232;
 }
 
 
