--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 body {
+    min-width: 1200px;
     margin: 0;
     padding: 0;
     font-family: "Roboto", "Arial", sans-serif;
     font-size: 16px;
     line-height: 22px;
     font-weight: 400;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     color: #ffffff;
     background-color: #849d8f;
 }
@@ -39,7 +42,6 @@ input[type="radio"].visually-hidden {
 }
 
 .site-wrapper {
-    min-width: 940px;
     background-color: #849d8f;
     background-image: url("../img/slide1.png");
     background-repeat: no-repeat;
@@ -62,15 +64,15 @@ input[type="radio"].visually-hidden {
 }
 
 .site-wrapper::before {
-    background-image: url("slide3.png");
+    background-image: url("../img/slide3.png");
 }
 
 .site-wrapper::after {
-    background-image: url("slide2.png");
+    background-image: url("../img/slide2.png");
 }
 
 .content-wrapper {
-    min-width: 1146px;
+    width: 1146px;
     margin: 0 auto;
     padding: 0 27px;
 }
@@ -160,8 +162,6 @@ input[type="radio"].visually-hidden {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    width: 1146px;
-    margin: 0 auto;
     font-size: 16px;
     line-height: 18px;
     font-weight: 700;
@@ -185,7 +185,6 @@ input[type="radio"].visually-hidden {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    max-width: 560px;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -255,7 +254,6 @@ input[type="radio"].visually-hidden {
     margin-left: -53px;
     padding: 0;
     padding-top: 5px;
-    min-width: 143px;
     list-style: none;
     z-index: 2;
 }
@@ -334,7 +332,6 @@ input[type="radio"].visually-hidden {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    max-width: 350px;
     margin: 0;
     list-style: none;
     margin-top: 23px;
@@ -453,11 +450,6 @@ input[type="radio"].visually-hidden {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
-    width: 1146px;
-    margin: 0;
-    padding: 0;
-    margin: 0 auto;
-    padding: 0 27px;
 }
 
 .info {
@@ -590,11 +582,6 @@ input[type="radio"].visually-hidden {
     background-image: url("../img/slide3.png");
 }
 
-.main-wrapper {
-    width: 1146px;
-    margin: 0 auto;
-}
-
 .breadcrumbs {
     margin: 0;
     padding: 0;
@@ -707,14 +694,14 @@ input[type="radio"].visually-hidden {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background-image: url(../img/select-arrow-white.svg);
+    background-image: url("../img/select-arrow-white.svg");
     background-repeat: no-repeat;
     background-position: 168px 12px;
 }
 
 .sort-wrapper:hover select {
     color: #000;
-    background-image: url(../img/select-arrow-black.svg);
+    background-image: url("../img/select-arrow-black.svg");
     background-repeat: no-repeat;
     background-position: 168px 12px;
 }
@@ -754,7 +741,7 @@ input[type="radio"].visually-hidden {
     width: 25px;
     height: 25px;
     opacity: 0.8;
-    background-image: url(../img/radio-off.svg);
+    background-image: url("../img/radio-off.svg");
     background-repeat: no-repeat;
     cursor: pointer;
 }
@@ -769,7 +756,7 @@ input[type="radio"].visually-hidden {
 .fat-filter input[type=radio]:hover:checked + label::before,
 .fat-filter input[type=radio]:focus:checked + label::before {
     opacity: 1;
-    background-image: url(../img/radio-on.svg);
+    background-image: url("../img/radio-on.svg");
     background-repeat: no-repeat;
     cursor: pointer;
 }
@@ -808,7 +795,7 @@ input[type="radio"].visually-hidden {
     width: 24px;
     height: 20px;
     opacity: 0.8;
-    background-image: url(../img/checkbox-off.svg);
+    background-image: url("../img/checkbox-off.svg");
     background-repeat: no-repeat;
     cursor: pointer;
 }
@@ -977,7 +964,7 @@ input[type="radio"].visually-hidden {
     margin: 0;
     padding: 0;
     list-style: none;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .products img {
@@ -987,6 +974,7 @@ input[type="radio"].visually-hidden {
 
 .product-item {
     width: 267px;
+    margin-top: 20px;
     margin-right: 26px;
 }
 
@@ -1018,7 +1006,6 @@ input[type="radio"].visually-hidden {
     margin-left: 31px;
     padding-left: 14px;
     padding-right: 14px;
-    min-width: 204px;
 }
 
 .product-item:hover {
@@ -1033,7 +1020,7 @@ input[type="radio"].visually-hidden {
     box-shadow: 0 20px 20px 0 rgba(0,0,0,0.4);
     padding-left: 13px;
     padding-right: 13px;
-    padding-top: 6px;
+    padding-top: 26px;
 }
 
 .product-item:hover .hidden {
@@ -1041,7 +1028,6 @@ input[type="radio"].visually-hidden {
     margin-left: 31px;
     padding-left: 16px;
     padding-right: 14px;
-    min-width: 204px;
     border-radius: 20px;
 }
 
@@ -1059,6 +1045,10 @@ input[type="radio"].visually-hidden {
     font-weight: 500;
     text-decoration: none;
     border-bottom: 1px solid rgba(255,255,255,0.2);
+}
+
+.product-item a:hover {
+    color: #ffbc9e;
 }
 
 .price {
@@ -1089,7 +1079,6 @@ input[type="radio"].visually-hidden {
     background-repeat: no-repeat;
     padding-bottom: 20px;
     border-radius: 15px;
-    margin-top: -2px;
     margin-bottom: 40px;
 }
 
@@ -1130,7 +1119,7 @@ input[type="radio"].visually-hidden {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin-top: 8px;
+    margin-top: 6px;
     margin-left: 13px;
     margin-bottom: 3px;
 }
@@ -1195,7 +1184,7 @@ input[type="radio"].visually-hidden {
 
 .blog {
     width: 560px;
-    max-height: 220px;
+    min-height: 220px;
     color: #000;
     background-color: #fff;
     background-image: url("../img/blog.png");
@@ -1211,17 +1200,17 @@ input[type="radio"].visually-hidden {
     font-weight: 500;
     margin: 0;
     padding: 0;
-    margin-top: 23px;
-    margin-left: 19px;
-    margin-bottom: 3px;
+    padding-top: 25px;
+    padding-left: 20px;
 }
 
 .blog-url {
-    margin: 4px 0 83px 20px;
     width: 290px;
     font-weight: 400;
     font-size: 24px;
     line-height: 30px;
+    padding-left: 20px;
+    padding-top: 5px;
 }
 
 .blog a {
@@ -1235,7 +1224,7 @@ input[type="radio"].visually-hidden {
 
 .subs {
     width: 560px;
-    max-height: 220px;
+    min-height: 220px;
     background-color: #f8f7f4;
     background-image: url("../img/subs.png");
     background-position: left;
@@ -1249,8 +1238,8 @@ input[type="radio"].visually-hidden {
     font-weight: 400;
     color: #5a5a5a;
     margin: 0;
-    padding-top: 34px;
-    padding-left: 28px;
+    padding-top: 35px;
+    padding-left: 27px;
     width: 510px;
 }
 
@@ -1305,8 +1294,10 @@ input[type="radio"].visually-hidden {
     margin: 0;
     padding: 0;
     list-style: none;
-    margin-top: 44px;
-    margin-bottom: 38px;
+    margin-top: 68px;
+    margin-bottom: 7px;
+    padding-bottom: 31px;
+    border-bottom: 1px solid #a9bbb1;
 }
 
 .pagination-list li {
@@ -1359,19 +1350,19 @@ input[type="radio"].visually-hidden {
 
 .map {
     position: relative;
-    width: 1200px;
     height: 430px;
+    margin-bottom: 10px;
     margin-left: -27px;
-    margin-bottom: 5px;
+    margin-right: -27px;
 }
 
 .map .map-wrapper {
-        margin: 0 auto;
-        width: 100%;
-        height: 430px; 
-        background-color: #e9e2c6;   
-        background-image: url(../img/map.jpg);
-        background-repeat: no-repeat;
+    margin: 0 auto;
+    width: 100%;
+    height: 430px;
+    background-color: #e9e2c6;
+    background-image: url(../img/map.jpg);
+    background-repeat: no-repeat;
 }
 
 .map .map-iframe {
@@ -1447,25 +1438,25 @@ input[type="radio"].visually-hidden {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 1146px;
-    margin: 0 auto;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    min-height: 92px;
 }
 
 .footer-social {
     width: 230px;
-    margin: 0;
-    margin-right: 7px;
-    margin-top: -6px;
-    margin-left: -26px;
-}
-
-.footer-social {
     text-align: left;
 }
 
 .footer-social ul,
 .footer-links ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .footer-social ul {
@@ -1481,8 +1472,6 @@ input[type="radio"].visually-hidden {
     list-style: none;
     margin: 0;
     padding: 0;
-    margin-top: 37px;
-    margin-left: 28px;
 }
 
 .social-btn {
@@ -1516,15 +1505,8 @@ input[type="radio"].visually-hidden {
 }
 
 .footer-links {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     width: 355px;
-    margin: 0;
-    margin-top: 15px;
-    padding-left: 171px;
+    margin-left: 10px;
 }
 
 .footer-links a {
@@ -1575,17 +1557,12 @@ input[type="radio"].visually-hidden {
 }
 
 .copyright {
-    margin: 0;
-    margin-left: auto;
+    margin-top: -10px;
 }
 
 .copyright-logo {
     width: 107px;
     height: 38px;
-    margin: 0;
-    padding: 0;
-    margin-top: 13px;
-    margin-left: -1px;
 }
 
 .copyright p {
